src/gestaoflex/pfm-auth/hom/k8s-deployment.yaml
# Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: gflex-hom
  name: pfm-auth
  labels:
    app: pfm-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfm-auth
  template:
    metadata:
      labels:
        app: pfm-auth
    spec:
      containers:
        - name: pfm-auth-container
          image: gestaoflex/pfm-auth:1.0.9-dev
          ports:
            - name: server
              containerPort: 3303
